# flashfocus

./: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.txt  default.nix  dev-requirements.txt  fastentrypoints.py  flake.nix  i3flash.py  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: debug.yml  docker_build.yml  pre-commit.yml  pull_request.yml  test.yml  tmate.yml
demo/: demo.webm
flashfocus/: Xutil.py  __init__.py  cli.py  client.py  color.py  compat.py  config.py  default_config.yml  display.py  errors.py  flasher.py  flashfocus.py  logging.py  misc.py  monitor.py  pid.py  producer.py  producers.py  protocol.py  router.py  rule.py  server.py  sockets.py  sockets.py.88d76c65482ab5c03c066d122c3216ab.py  sway.py  syspaths.py  types.py  ui.py  util.py  x.py  xutil.py
flashfocus/display_protocols/: sway.py  x11.py
i3flash/: i3flash.py  opacity.py  profile.sh  program.prof  run_prof.py  server.py
scripts/: docker_build  test
src/: errors.rs  main.rs
src/flashfocus/: client.py  config.py  display.py  errors.py  flasher.py  producer.py  router.py  server.py  types.py
src/flashfocus/display_protocols/: sway.py  x11.py
test/: compat.py  conftest.py  docker_startup.sh  helpers.py  test_Xutil.py  test_cli.py  test_client.py  test_compat.py  test_config.py  test_display_protocols_x11.py  test_flasher.py  test_flashfocus.py  test_monitor.py  test_pid.py  test_producer.py  test_rule.py  test_server.py  test_sockets.py  test_syspaths.py  test_ui.py  test_x.py  test_xutil.py  x11_helpers.py
tests/: compat.py  conftest.py  helpers.py  test_cli.py  test_client.py  test_compat.py  test_config.py  test_display_protocols_x11.py  test_flasher.py  test_pid.py  test_server.py  test_sockets.py  x11_helpers.py
